# EDGI_ECT

./: README.md  configure.ac
src/: ECT.cpp  Makefile.am
tests/: test_ncread.cpp  test_ncwrite.cpp
